cbits/skia_capi/skparagraph.h

SK_C_API void skparagraph_text_style_set_font_arguments(
    skparagraph_text_style_t *style, sk_fontarguments_t *args
);
SK_C_API void skparagraph_text_style_set_font_size(
    skparagraph_text_style_t *style, sk_scalar_t size
);
SK_C_API void skparagraph_text_style_set_font_families(
    skparagraph_text_style_t *style, sk_string_t *families[], int familiesCount
);
SK_C_API void skparagraph_text_style_set_baseline_shift(
    skparagraph_text_style_t *style, sk_scalar_t shift
);
SK_C_API void skparagraph_text_style_set_height(
    skparagraph_text_style_t *style, sk_scalar_t height
);
SK_C_API void skparagraph_text_style_set_height_override(
    skparagraph_text_style_t *style, sk_scalar_t height
);
SK_C_API void skparagraph_text_style_set_half_leading(
    skparagraph_text_style_t *style, sk_scalar_t height
);
SK_C_API void skparagraph_text_style_set_letter_spacing(
    skparagraph_text_style_t *style, sk_scalar_t letterSpacing
);
SK_C_API void skparagraph_text_style_set_word_spacing(
    skparagraph_text_style_t *style, sk_scalar_t wordSpacing
);
SK_C_API void skparagraph_text_style_set_typeface(
    skparagraph_text_style_t *style, sk_typeface_t *typeface
);
SK_C_API void skparagraph_text_style_set_locale(
    skparagraph_text_style_t *style, sk_string_t *locale
);
SK_C_API void skparagraph_text_style_set_text_baseline(
    skparagraph_text_style_t *style, skparagraph_text_baseline_t baseline
);
SK_C_API void skparagraph_text_style_set_placeholder(
    skparagraph_text_style_t *style
);
// StrutStyle

SK_C_API skparagraph_strut_style_t *skparagraph_strut_style_new(void);
SK_C_API void skparagraph_strut_style_delete(skparagraph_strut_style_t *strut);
SK_C_API void skparagraph_strut_style_set_font_families(
    skparagraph_strut_style_t *strut, sk_string_t *families[], int familiesCount
);
SK_C_API void skparagraph_strut_style_set_font_style(
    skparagraph_strut_style_t *strut, sk_fontstyle_t *style
);
SK_C_API void skparagraph_strut_style_set_font_size(
    skparagraph_strut_style_t *strut, sk_scalar_t size
);