src/Skia/Bindings/Skparagraph.hs


{- | C function signature:

@
void skparagraph_text_style_set_font_arguments(skparagraph_text_style_t *style, sk_fontarguments_t *args)
@
-}
foreign import ccall "skparagraph_text_style_set_font_arguments" skparagraph_text_style_set_font_arguments ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Ptr (Sk_fontarguments) -- ^ C argument @"sk_fontarguments_t * args"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_font_arguments'
foreign import ccall "&skparagraph_text_style_set_font_arguments" p'skparagraph_text_style_set_font_arguments ::
  FunPtr (Ptr (Skparagraph_text_style) -> Ptr (Sk_fontarguments) -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_font_size(skparagraph_text_style_t *style, sk_scalar_t size)
@
-}
foreign import ccall "skparagraph_text_style_set_font_size" skparagraph_text_style_set_font_size ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t size"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_font_size'
foreign import ccall "&skparagraph_text_style_set_font_size" p'skparagraph_text_style_set_font_size ::
  FunPtr (Ptr (Skparagraph_text_style) -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_font_families(skparagraph_text_style_t *style, sk_string_t *families[], int familiesCount)
@
-}
foreign import ccall "skparagraph_text_style_set_font_families" skparagraph_text_style_set_font_families ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Ptr (Ptr (Sk_string)) -- ^ C argument @"sk_string_t *[] families"@
  -> CInt -- ^ C argument @"int familiesCount"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_font_families'
foreign import ccall "&skparagraph_text_style_set_font_families" p'skparagraph_text_style_set_font_families ::
  FunPtr (Ptr (Skparagraph_text_style) -> Ptr (Ptr (Sk_string)) -> CInt -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_baseline_shift(skparagraph_text_style_t *style, sk_scalar_t shift)
@
-}
foreign import ccall "skparagraph_text_style_set_baseline_shift" skparagraph_text_style_set_baseline_shift ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t shift"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_baseline_shift'
foreign import ccall "&skparagraph_text_style_set_baseline_shift" p'skparagraph_text_style_set_baseline_shift ::
  FunPtr (Ptr (Skparagraph_text_style) -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_height(skparagraph_text_style_t *style, sk_scalar_t height)
@
-}
foreign import ccall "skparagraph_text_style_set_height" skparagraph_text_style_set_height ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t height"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_height'
foreign import ccall "&skparagraph_text_style_set_height" p'skparagraph_text_style_set_height ::
  FunPtr (Ptr (Skparagraph_text_style) -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_height_override(skparagraph_text_style_t *style, sk_scalar_t height)
@
-}
foreign import ccall "skparagraph_text_style_set_height_override" skparagraph_text_style_set_height_override ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t height"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_height_override'
foreign import ccall "&skparagraph_text_style_set_height_override" p'skparagraph_text_style_set_height_override ::
  FunPtr (Ptr (Skparagraph_text_style) -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_half_leading(skparagraph_text_style_t *style, sk_scalar_t height)
@
-}
foreign import ccall "skparagraph_text_style_set_half_leading" skparagraph_text_style_set_half_leading ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t height"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_half_leading'
foreign import ccall "&skparagraph_text_style_set_half_leading" p'skparagraph_text_style_set_half_leading ::
  FunPtr (Ptr (Skparagraph_text_style) -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_letter_spacing(skparagraph_text_style_t *style, sk_scalar_t letterSpacing)
@
-}
foreign import ccall "skparagraph_text_style_set_letter_spacing" skparagraph_text_style_set_letter_spacing ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t letterSpacing"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_letter_spacing'
foreign import ccall "&skparagraph_text_style_set_letter_spacing" p'skparagraph_text_style_set_letter_spacing ::
  FunPtr (Ptr (Skparagraph_text_style) -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_word_spacing(skparagraph_text_style_t *style, sk_scalar_t wordSpacing)
@
-}
foreign import ccall "skparagraph_text_style_set_word_spacing" skparagraph_text_style_set_word_spacing ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t wordSpacing"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_word_spacing'
foreign import ccall "&skparagraph_text_style_set_word_spacing" p'skparagraph_text_style_set_word_spacing ::
  FunPtr (Ptr (Skparagraph_text_style) -> Sk_scalar -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_typeface(skparagraph_text_style_t *style, sk_typeface_t *typeface)
@
-}
foreign import ccall "skparagraph_text_style_set_typeface" skparagraph_text_style_set_typeface ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Ptr (Sk_typeface) -- ^ C argument @"sk_typeface_t * typeface"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_typeface'
foreign import ccall "&skparagraph_text_style_set_typeface" p'skparagraph_text_style_set_typeface ::
  FunPtr (Ptr (Skparagraph_text_style) -> Ptr (Sk_typeface) -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_locale(skparagraph_text_style_t *style, sk_string_t *locale)
@
-}
foreign import ccall "skparagraph_text_style_set_locale" skparagraph_text_style_set_locale ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Ptr (Sk_string) -- ^ C argument @"sk_string_t * locale"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_locale'
foreign import ccall "&skparagraph_text_style_set_locale" p'skparagraph_text_style_set_locale ::
  FunPtr (Ptr (Skparagraph_text_style) -> Ptr (Sk_string) -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_text_baseline(skparagraph_text_style_t *style, skparagraph_text_baseline_t baseline)
@
-}
foreign import ccall "skparagraph_text_style_set_text_baseline" skparagraph_text_style_set_text_baseline ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> Skparagraph_text_baseline -- ^ C argument @"skparagraph_text_baseline_t baseline"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_text_baseline'
foreign import ccall "&skparagraph_text_style_set_text_baseline" p'skparagraph_text_style_set_text_baseline ::
  FunPtr (Ptr (Skparagraph_text_style) -> Skparagraph_text_baseline -> IO (()))

{- | C function signature:

@
void skparagraph_text_style_set_placeholder(skparagraph_text_style_t *style)
@
-}
foreign import ccall "skparagraph_text_style_set_placeholder" skparagraph_text_style_set_placeholder ::
  Ptr (Skparagraph_text_style) -- ^ C argument @"skparagraph_text_style_t * style"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_text_style_set_placeholder'
foreign import ccall "&skparagraph_text_style_set_placeholder" p'skparagraph_text_style_set_placeholder ::
  FunPtr (Ptr (Skparagraph_text_style) -> IO (()))

{- | C function signature:

@
skparagraph_strut_style_t *skparagraph_strut_style_new(void)
@
-}
foreign import ccall "skparagraph_strut_style_new" skparagraph_strut_style_new ::
  IO (Ptr (Skparagraph_strut_style)) -- ^ C return type: @"skparagraph_strut_style_t *"@

-- | Function pointer to 'skparagraph_strut_style_new'
foreign import ccall "&skparagraph_strut_style_new" p'skparagraph_strut_style_new ::
  FunPtr (IO (Ptr (Skparagraph_strut_style)))

{- | C function signature:

@
void skparagraph_strut_style_delete(skparagraph_strut_style_t *strut)
@
-}
foreign import ccall "skparagraph_strut_style_delete" skparagraph_strut_style_delete ::
  Ptr (Skparagraph_strut_style) -- ^ C argument @"skparagraph_strut_style_t * strut"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_strut_style_delete'
foreign import ccall "&skparagraph_strut_style_delete" p'skparagraph_strut_style_delete ::
  FunPtr (Ptr (Skparagraph_strut_style) -> IO (()))

{- | C function signature:

@
void skparagraph_strut_style_set_font_families(skparagraph_strut_style_t *strut, sk_string_t *families[], int familiesCount)
@
-}
foreign import ccall "skparagraph_strut_style_set_font_families" skparagraph_strut_style_set_font_families ::
  Ptr (Skparagraph_strut_style) -- ^ C argument @"skparagraph_strut_style_t * strut"@
  -> Ptr (Ptr (Sk_string)) -- ^ C argument @"sk_string_t *[] families"@
  -> CInt -- ^ C argument @"int familiesCount"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_strut_style_set_font_families'
foreign import ccall "&skparagraph_strut_style_set_font_families" p'skparagraph_strut_style_set_font_families ::
  FunPtr (Ptr (Skparagraph_strut_style) -> Ptr (Ptr (Sk_string)) -> CInt -> IO (()))

{- | C function signature:

@
void skparagraph_strut_style_set_font_style(skparagraph_strut_style_t *strut, sk_fontstyle_t *style)
@
-}
foreign import ccall "skparagraph_strut_style_set_font_style" skparagraph_strut_style_set_font_style ::
  Ptr (Skparagraph_strut_style) -- ^ C argument @"skparagraph_strut_style_t * strut"@
  -> Ptr (Sk_fontstyle) -- ^ C argument @"sk_fontstyle_t * style"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_strut_style_set_font_style'
foreign import ccall "&skparagraph_strut_style_set_font_style" p'skparagraph_strut_style_set_font_style ::
  FunPtr (Ptr (Skparagraph_strut_style) -> Ptr (Sk_fontstyle) -> IO (()))

{- | C function signature:

@
void skparagraph_strut_style_set_font_size(skparagraph_strut_style_t *strut, sk_scalar_t size)
@
-}
foreign import ccall "skparagraph_strut_style_set_font_size" skparagraph_strut_style_set_font_size ::
  Ptr (Skparagraph_strut_style) -- ^ C argument @"skparagraph_strut_style_t * strut"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t size"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_strut_style_set_font_size'
foreign import ccall "&skparagraph_strut_style_set_font_size" p'skparagraph_strut_style_set_font_size ::
  FunPtr (Ptr (Skparagraph_strut_style) -> Sk_scalar -> IO (()))

{- | C function signature:
